--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,16 +2,22 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Tarefas</title>
-
+    <title>To-Do List</title>
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
 <body>
 
-<h1>Minhas tarefas</h1>
-<button id="btn">Carregar tarefas</button>
+<div class="container">
+    <h1>📝 Minha To-Do List</h1>
+    
+    <div class="add-task">
+        <input type="text" id="novaTarefa" placeholder="Digite uma nova tarefa...">
+        <button id="btnAdicionar">Adicionar</button>
+    </div>
 
-<ul id="lista"></ul>
+    <ul id="lista"></ul>
+</div>
 
 <script src="js/app.js"></script>
 </body>
